--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
-.header {
-    background-color: #1F2937;
+body {
     color: white;
     font-family: "roboto", sans-serif;
+    margin: 0;
+}
+
+.header {
+    background-color: #1F2937;
     display: flex;
     justify-content: space-between;
+    padding: 16px 100px;
     
 }
 
