--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ body {
     background-color: #1F2937;
     display: flex;
     justify-content: space-between;
-    padding: 16px 100px;
-    
+    padding: 16px;
+    flex: 1;
 }
 
 ul {
@@ -24,4 +24,14 @@ a {
     display: flex;
     text-decoration: none;
     color: white;
+}
+
+.space1 {
+    display: flex;
+    width: 100px;
+}
+
+.test {
+    display: flex;
+    background-color: #1F2937;
 }
