--- a/style.css
+++ b/style.css
@@ -68,11 +68,11 @@ button {
 
 .image {
     display: flex;
-    width: 300px;
     height: 200px;
+    justify-content: center;
     align-items: center;
     background-color: grey;
     margin-top: 40px;
-    padding: 20px 150px;
+    margin-right: 150px;
     flex: auto;
 }
