--- a/style.css
+++ b/style.css
@@ -28,23 +28,21 @@ a {
 
 .space1 {
     display: flex;
-    width: 100px;
+    min-width: 100px;
 }
 
 .test {
     display: flex;
     background-color: #1F2937;
+    flex: 1;
 }
 
 .h1 {
     background-color: #1F2937;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-between;
     flex: auto;
-    padding: 50px 150px;
-    padding-right: 50px;
+    padding: 50px 0px 50px 150px;
     margin: 0;
 }
 
@@ -69,10 +67,10 @@ button {
 .image {
     display: flex;
     height: 200px;
+    width: 450px;
     justify-content: center;
     align-items: center;
     background-color: grey;
-    margin-top: 40px;
-    margin-right: 150px;
+    margin: 60px 150px 0 0;
     flex: auto;
 }
