--- a/style.css
+++ b/style.css
@@ -48,13 +48,13 @@ a {
 
 h1 {
     margin: 0;
-    width: 400px;
+    max-width: 400px;
     font-size: 48px;
 }
 
 p {
     margin-top: 4px;
-    width: 400px;
+    max-width: 400px;
 }
 
 button {
@@ -67,7 +67,7 @@ button {
 .image {
     display: flex;
     height: 200px;
-    width: 450px;
+    width: 200px;
     justify-content: center;
     align-items: center;
     background-color: grey;
