--- a/style.css
+++ b/style.css
@@ -74,3 +74,13 @@ button {
     margin: 60px 150px 0 0;
     flex: auto;
 }
+
+button {
+    font-weight: bold;
+    font-family: "roboto", sans-serif;
+    background-color: #3882F6;
+    color: white;
+    border: none;
+    text-decoration: none;
+    border-radius: 8px;
+}
