--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ body {
     justify-content: space-between;
     padding: 16px 150px;
     flex: auto;
+    font-weight: bold;
+    color: #f9faf8;
+    font-size: 24px;
 }
 
 ul {
@@ -18,12 +21,14 @@ ul {
     padding: 0;
     gap: 20px;
     list-style: none;
+    font-weight: lighter;
+    font-size: 18px;
 }
 
 a {
     display: flex;
     text-decoration: none;
-    color: white;
+    color: #e5e7eb;
 }
 
 .space1 {
@@ -55,6 +60,8 @@ h1 {
 p {
     margin-top: 4px;
     max-width: 400px;
+    font-size: 18px;
+    color: #e5e7eb;
 }
 
 button {
@@ -70,7 +77,7 @@ button {
     width: 500px;
     justify-content: center;
     align-items: center;
-    background-color: grey;
+    background-color: darkgrey;
     margin: 60px 150px 0 0;
     flex: auto;
 }
