--- a/style.css
+++ b/style.css
@@ -143,14 +143,22 @@ button {
 
 .test2 {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #e5e7eb;
-    padding: 100px 180px 100px 180px;
+    padding: 100px 300px 100px 300px;
 }
 
 .quote {
     color: #1F2937;
     font-size: 36px;
     font-style: italic;
+}
+
+.reference {
+    font-weight: bolder;
+    font-size: 24px;
+    color: #1F2937;
+    align-self: flex-end;
 }
