--- a/style.css
+++ b/style.css
@@ -67,8 +67,8 @@ p {
 button {
     margin: 0;
     padding: 0;
-    width: 100px;
-    height: 30px;
+    width: 120px;
+    height: 35px;
 }
 
 .image {
@@ -161,4 +161,45 @@ button {
     font-size: 24px;
     color: #1F2937;
     align-self: flex-end;
+}
+
+.container3 {
+    display: flex;
+    background-color: #3882F6;
+    margin: 100px 200px 100px 200px;
+    padding: 50px 50px 50px 50px;
+    border-radius: 12px;
+}
+
+.h3 {
+    font-size: 24px;
+    font-weight: bolder;
+}
+
+.dios {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    width: 140px;
+    height: 40px;
+    border-style: solid;
+    font-weight: bolder;
+    font-size: 16px;
+    flex-wrap: wrap;
+}
+
+.move {
+    display: flex;
+    margin-left: 250px;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
